Revert "不知道该如何判断元素是否在可视区"
This reverts commit 556c4f9d6e1dfc7934423851cefc655212b8bb51.

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,7 +9,6 @@ $menuLiGap: 20px;
 $sideNav: 100px;
 $allCateH: 130px;
 $sortBoxH: 56px;
-$currenColor: #0089dc;
 
 body {
     background: #f7f7f7;
@@ -288,14 +287,14 @@ footer {
             }
             li.curren,
             li:hover {
-                color: $currenColor;
+                color: #0089dc;
                 font-weight: bold;
                 border: none;
 
             }
             li.curren::after,
             li:hover::after {
-                background: $currenColor;
+                background: #0089dc;
             }
         }
 
@@ -334,7 +333,7 @@ footer {
                     }
                     li:hover,
                     .curren {
-                        background: $currenColor;
+                        background: #0089dc;
                         color: #fff;
                         border: none;
                     }
@@ -353,8 +352,8 @@ footer {
         }
         li:hover,
         .curren {
-            border-bottom: 2px solid $currenColor;
-            color: $currenColor;
+            border-bottom: 2px solid #0089dc;
+            color: #0089dc;
         }
         .searchBox {
             width: 214px;
@@ -406,7 +405,6 @@ footer {
 .floorBox {
     .floor {
         h3 {
-            padding: 50px 0 20px;
             font-size: 16px;
             line-height: 50px;
             color: #333;
@@ -415,9 +413,6 @@ footer {
                 font-weight: normal;
                 color: #999;
             }
-        }
-        h3.curren{
-            color: $currenColor;
         }
         ul {
             overflow: hidden;
@@ -476,7 +471,7 @@ footer {
                     line-height: 22px;
                     color: #fff;
                     display: block;
-                    background: $currenColor;
+                    background: #0089dc;
                     position: absolute;
                     right: 10px;
                     bottom: 10px;
@@ -487,9 +482,6 @@ footer {
                     background: coral;
                     text-decoration: none;
                 }
-            }
-            li:hover{
-                box-shadow:  1px 2px 5px rgba(0,0,0,0.2);
             }
         }
     }
